--- a/index.css
+++ b/index.css
@@ -151,6 +151,11 @@
   flex-direction: column;
   justify-content: flex-start;
 }
+.home-hero-heading {
+  max-width: 800px;
+  text-align: center;
+  font-family: "Cabin";
+}
 .home-features {
   flex: 0 0 auto;
   width: 100%;
