--- a/index.css
+++ b/index.css
@@ -1,460 +1,254 @@
-.feature-card-container {
-  gap: var(--dl-space-space-unit);
-  display: flex;
-  align-items: flex-start;
-  flex-direction: column;
-  justify-content: flex-start;
-}
-.feature-card-text {
-  font-weight: 600;
-  line-height: 28px;
-}
-@media(max-width: 767px) {
-  .feature-card-feature-card {
-    flex-direction: row;
-  }
-  .feature-card-container {
-    flex-direction: column;
-  }
-}
-@media(max-width: 479px) {
-  .feature-card-container {
-    flex-direction: column;
-  }
-}
-
-.question1-container {
-  gap: var(--dl-space-space-unit);
-  flex: 1;
-  width: auto;
-  height: auto;
-  display: flex;
-  position: relative;
-  align-items: flex-start;
-  flex-direction: column;
-}
-.question1-text {
-  font-weight: 700;
-}
-
-.home-container {
-  width: 100%;
-  display: flex;
-  overflow: auto;
-  min-height: 100vh;
-  align-items: center;
-  flex-direction: column;
-}
-.home-header {
-  width: 100%;
-  display: flex;
-  z-index: 100;
-  position: fixed;
-  align-items: center;
-  flex-direction: column;
-  background-color: var(--dl-color-gray-white);
-}
-.home-desktop-menu {
-  flex: 1;
-  display: flex;
-  justify-content: space-between;
-}
-.home-burger-menu {
-  display: none;
-}
-.home-icon {
-  width: var(--dl-size-size-xsmall);
-  cursor: pointer;
-  height: var(--dl-size-size-xsmall);
-}
-.home-mobile-menu1 {
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  height: 100vh;
-  display: none;
-  padding: 32px;
-  z-index: 100;
-  position: absolute;
-  flex-direction: column;
-  justify-content: space-between;
-}
-.home-nav {
-  display: flex;
-  align-items: flex-start;
-  flex-direction: column;
-}
-.home-top {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  margin-bottom: var(--dl-space-space-threeunits);
-  justify-content: space-between;
-}
-.home-close-menu {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.home-icon02 {
-  width: var(--dl-size-size-xsmall);
-  cursor: pointer;
-  height: var(--dl-size-size-xsmall);
-}
-.home-links {
-  flex: 0 0 auto;
-  display: flex;
-  align-self: flex-start;
-  align-items: flex-start;
-  flex-direction: column;
-}
-.home-nav12 {
-  margin-bottom: var(--dl-space-space-unit);
-}
-.home-nav22 {
-  margin-bottom: var(--dl-space-space-unit);
-}
-.home-nav32 {
-  margin-bottom: var(--dl-space-space-unit);
-}
-.home-nav42 {
-  margin-bottom: var(--dl-space-space-unit);
-}
-.home-nav52 {
-  margin-bottom: var(--dl-space-space-unit);
-}
-.home-buttons {
-  display: flex;
-  margin-top: var(--dl-space-space-unit);
-  align-items: center;
-  flex-direction: row;
-  justify-content: space-between;
-}
-.home-icon04 {
-  width: var(--dl-size-size-xsmall);
-  height: var(--dl-size-size-xsmall);
-  margin-right: var(--dl-space-space-twounits);
-}
-.home-icon06 {
-  width: var(--dl-size-size-xsmall);
-  height: var(--dl-size-size-xsmall);
-  margin-right: var(--dl-space-space-twounits);
-}
-.home-icon08 {
-  width: var(--dl-size-size-xsmall);
-  height: var(--dl-size-size-xsmall);
-}
-.home-container1 {
-  gap: var(--dl-space-space-oneandhalfunits);
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  justify-content: flex-start;
-}
-.home-hero-heading {
-  max-width: 800px;
-  text-align: center;
-  font-family: "Cabin";
-}
-.home-features {
-  flex: 0 0 auto;
-  width: 100%;
-  height: auto;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.home-features1 {
-  gap: var(--dl-space-space-threeunits);
-  width: 100%;
-  display: flex;
-  max-width: var(--dl-size-size-maxwidth);
-  align-items: center;
-  padding-top: var(--dl-space-space-fourunits);
-  padding-left: var(--dl-space-space-threeunits);
-  padding-right: var(--dl-space-space-threeunits);
-  flex-direction: column;
-  padding-bottom: var(--dl-space-space-fourunits);
-  justify-content: flex-start;
-}
-.home-container2 {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  justify-content: flex-start;
-}
-.home-features-heading {
-  font-size: 35px;
-  font-family: "Cabin";
-  font-weight: 600;
-  line-height: 150%;
-  margin-bottom: var(--dl-space-space-oneandhalfunits);
-}
-.home-features-sub-heading {
-  font-size: 18px;
-  text-align: center;
-}
-.home-container3 {
-  width: 100%;
-  display: grid;
-  grid-gap: var(--dl-space-space-oneandhalfunits);
-  grid-template-columns: 1fr 1fr;
-}
-.home-faq {
-  flex: 0 0 auto;
-  width: 100%;
-  height: auto;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.home-faq1 {
-  gap: var(--dl-space-space-twounits);
-  width: 100%;
-  display: flex;
-  max-width: var(--dl-size-size-maxwidth);
-  align-items: flex-start;
-  padding-top: var(--dl-space-space-fourunits);
-  padding-left: var(--dl-space-space-threeunits);
-  padding-right: var(--dl-space-space-threeunits);
-  flex-direction: row;
-  padding-bottom: var(--dl-space-space-fourunits);
-}
-.home-container4 {
-  display: flex;
-  max-width: 35%;
-  align-items: flex-start;
-  flex-direction: column;
-  justify-content: flex-start;
-}
-.home-text31 {
-  margin-bottom: var(--dl-space-space-oneandhalfunits);
-}
-.home-text32 {
-  text-align: left;
-}
-.home-container5 {
-  gap: var(--dl-space-space-oneandhalfunits);
-  display: flex;
-  align-items: flex-start;
-  flex-direction: column;
-}
-.home-footer {
-  flex: 0 0 auto;
-  width: 100%;
-  height: auto;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.home-container6 {
-  gap: var(--dl-space-space-unit);
-  display: flex;
-  max-width: var(--dl-size-size-maxwidth);
-  align-items: center;
-  flex-direction: column;
-  justify-content: flex-start;
-}
-.home-separator {
-  flex: 0 0 auto;
-  width: 100%;
-  height: 0px;
-  display: flex;
-  margin-top: var(--dl-space-space-twounits);
-  align-items: flex-start;
-  margin-left: 0px;
-  border-color: var(--dl-color-gray-900);
-  border-style: solid;
-  border-width: 1px;
-  margin-right: 0px;
-  margin-bottom: var(--dl-space-space-twounits);
-  flex-direction: row;
-  border-top-width: 0px;
-  border-left-width: 0px;
-  border-right-width: 0px;
-}
-.home-container7 {
-  flex: 0 0 auto;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  justify-content: space-between;
-}
-@media(max-width: 991px) {
-  .home-hero1 {
-    flex-direction: column;
-  }
-  .home-container1 {
-    align-items: center;
-    margin-right: 0px;
-    margin-bottom: var(--dl-space-space-twounits);
-    padding-right: 0px;
-  }
-  .home-hero-heading {
-    text-align: center;
-  }
-  .home-features-sub-heading {
-    text-align: center;
-    padding-left: var(--dl-space-space-threeunits);
-    padding-right: var(--dl-space-space-threeunits);
-  }
-  .home-text32 {
-    text-align: center;
-    padding-left: var(--dl-space-space-threeunits);
-    padding-right: var(--dl-space-space-threeunits);
-  }
-}
-@media(max-width: 767px) {
-  .home-navbar-interactive {
-    padding-left: var(--dl-space-space-twounits);
-    padding-right: var(--dl-space-space-twounits);
-  }
-  .home-desktop-menu {
-    display: none;
-  }
-  .home-burger-menu {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  .home-nav12 {
-    margin-bottom: var(--dl-space-space-unit);
-  }
-  .home-nav22 {
-    margin-bottom: var(--dl-space-space-unit);
-  }
-  .home-nav32 {
-    margin-bottom: var(--dl-space-space-unit);
-  }
-  .home-nav42 {
-    margin-bottom: var(--dl-space-space-unit);
-  }
-  .home-nav52 {
-    margin-bottom: var(--dl-space-space-unit);
-  }
-  .home-hero1 {
-    padding-left: var(--dl-space-space-twounits);
-    padding-right: var(--dl-space-space-twounits);
-  }
-  .home-features1 {
-    padding-left: var(--dl-space-space-twounits);
-    padding-right: var(--dl-space-space-twounits);
-  }
-  .home-features-sub-heading {
-    padding-left: var(--dl-space-space-unit);
-    padding-right: var(--dl-space-space-unit);
-  }
-  .home-container3 {
-    grid-template-columns: 1fr;
-  }
-  .home-faq1 {
-    flex-direction: column;
-  }
-  .home-container4 {
-    max-width: 100%;
-    align-self: center;
-    align-items: center;
-    justify-content: center;
-  }
-  .home-text32 {
-    padding-left: var(--dl-space-space-unit);
-    padding-right: var(--dl-space-space-unit);
-  }
-  .home-footer1 {
-    padding-left: var(--dl-space-space-twounits);
-    padding-right: var(--dl-space-space-twounits);
-  }
-  .home-separator {
-    margin-top: var(--dl-space-space-oneandhalfunits);
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-bottom: var(--dl-space-space-oneandhalfunits);
-  }
-  .home-container7 {
-    align-items: center;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-  .home-text35 {
-    margin-bottom: var(--dl-space-space-oneandhalfunits);
-  }
-}
-@media(max-width: 479px) {
-  .home-navbar-interactive {
-    padding: var(--dl-space-space-unit);
-  }
-  .home-mobile-menu1 {
-    padding: 16px;
-  }
-  .home-hero1 {
-    padding-top: var(--dl-space-space-twounits);
-    padding-left: var(--dl-space-space-unit);
-    padding-right: var(--dl-space-space-unit);
-    padding-bottom: var(--dl-space-space-twounits);
-  }
-  .home-container1 {
-    margin-bottom: var(--dl-space-space-unit);
-  }
-  .home-hero-heading {
-    font-family: Cabin;
-  }
-  .home-features1 {
-    padding-top: var(--dl-space-space-twounits);
-    padding-left: var(--dl-space-space-unit);
-    padding-right: var(--dl-space-space-unit);
-    padding-bottom: var(--dl-space-space-twounits);
-  }
-  .home-footer1 {
-    padding: var(--dl-space-space-unit);
-  }
-  .home-separator {
-    margin-top: var(--dl-space-space-oneandhalfunits);
-    margin-bottom: var(--dl-space-space-oneandhalfunits);
-  }
-  .home-container7 {
-    align-items: center;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-  .home-text35 {
-    text-align: center;
-    margin-bottom: var(--dl-space-space-oneandhalfunits);
-  }
-}
-/* reset any default margins on html/body and all elements */
-*,
-*::before,
-*::after {
+/* ----------------------------------------------
+   Global Reset
+---------------------------------------------- */
+*, *::before, *::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-/* make sure the page background matches your design */
-html,
-body {
-  background-color: var(--dl-color-custom-neutral-light);
+/* ----------------------------------------------
+   CSS Variables
+---------------------------------------------- */
+:root {
+  /* Color Palette */
+  --dl-color-gray-black: #000000;
+  --dl-color-gray-white: #FFFFFF;
+  --dl-color-gray-500: #595959;
+  --dl-color-gray-700: #999999;
+  --dl-color-gray-900: #D9D9D9;
+
+  --dl-color-primary-100: #003EB3;
+  --dl-color-primary-300: #0074F0;
+  --dl-color-primary-500: #14A9FF;
+  --dl-color-primary-700: #85DCFF;
+
+  --dl-color-success-300: #199033;
+  --dl-color-success-500: #32A94C;
+  --dl-color-success-700: #4CC366;
+
+  --dl-color-danger-300: #A22020;
+  --dl-color-danger-500: #BF2626;
+  --dl-color-danger-700: #E14747;
+
+  --dl-color-custom-primary1: #35452B;
+  --dl-color-custom-primary2: #727D6B;
+  --dl-color-custom-secondary1: #E9E7DE;
+  --dl-color-custom-accent1: #C7B090;
+  --dl-color-custom-accent2: #768350;
+  --dl-color-custom-neutral-dark: #1E2203;
+  --dl-color-custom-neutral-light: #FBF9EF;
+
+  /* Size Tokens */
+  --dl-size-xsmall: 16px;
+  --dl-size-small: 48px;
+  --dl-size-medium: 96px;
+  --dl-size-large: 144px;
+  --dl-size-xlarge: 192px;
+  --dl-size-xxlarge: 288px;
+  --dl-size-maxwidth: 1400px;
+
+  /* Spacing Tokens */
+  --dl-space-half: 8px;
+  --dl-space-unit: 16px;
+  --dl-space-two: 32px;
+  --dl-space-three: 48px;
+  --dl-space-four: 64px;
+  --dl-space-five: 80px;
+  --dl-space-six: 96px;
+  --dl-space-onehalf: 24px;
+
+  /* Radius Tokens */
+  --dl-radius-2: 2px;
+  --dl-radius-4: 4px;
+  --dl-radius-8: 8px;
+  --dl-radius-round: 50%;
 }
 
-/* kill any gaps on the hero section */
-.home-hero {
+/* ----------------------------------------------
+   Base Styles
+---------------------------------------------- */
+html, body {
   width: 100%;
-  margin: 0;   /* no stray margins */
-  padding: var(--dl-space-space-sixunits) var(--dl-space-space-threeunits);
+  background-color: var(--dl-color-custom-neutral-light);
+  font-family: 'Inter', sans-serif;
+  font-size: 16px;
+  line-height: 1.15;
+  color: var(--dl-color-gray-black);
+}
+
+/* ----------------------------------------------
+   Utility Classes
+---------------------------------------------- */
+.button, .buttonFilled, .buttonFilledSecondary, .buttonOutline, .buttonFlat,
+.input, .textarea {
+  font-family: Cabin, sans-serif;
+  font-weight: bold;
+  padding: var(--dl-space-half) var(--dl-space-onehalf);
+  border-radius: var(--dl-radius-8);
+}
+
+.button {
+  display: inline-block;
+  background-color: var(--dl-color-gray-white);
+  border: 1px solid var(--dl-color-gray-black);
+  color: var(--dl-color-gray-black);
+  transition: 0.3s;
+}
+
+.buttonFilled,
+.buttonFilledSecondary {
+  background-color: var(--dl-color-custom-primary1);
+  color: var(--dl-color-custom-neutral-light);
+  border: none;
+}
+.buttonFilled:hover,
+.buttonFilledSecondary:hover {
+  background-color: var(--dl-color-custom-primary2);
+}
+
+.buttonOutline {
+  background-color: transparent;
+  border: 1px solid var(--dl-color-custom-primary1);
+  color: var(--dl-color-custom-primary1);
+}
+.buttonOutline:hover {
+  background-color: #EEF0E9;
+  color: var(--dl-color-custom-accent2);
+}
+
+.buttonFlat {
+  background-color: transparent;
+  color: var(--dl-color-custom-neutral-dark);
+}
+.buttonFlat:hover {
+  color: var(--dl-color-custom-primary2);
+}
+
+/* ----------------------------------------------
+   Typography
+---------------------------------------------- */
+.heading1 { font-size: 48px; font-weight: 700; }
+.heading2 { font-size: 35px; font-weight: 600; }
+.heading3 { font-size: 20px; font-weight: 600; }
+.overline { font-size: 12px; font-weight: 700; text-transform: uppercase; }
+.bodyLarge { font-size: 18px; font-weight: 400; }
+.bodySmall { font-size: 16px; font-weight: 400; }
+.logo { font-size: 2em; font-weight: 700; text-transform: uppercase; }
+
+/* ----------------------------------------------
+   Layout & Components
+---------------------------------------------- */
+.home-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  align-items: center;
+  overflow: auto;
+}
+
+.home-header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: var(--dl-color-gray-white);
+  z-index: 100;
+}
+
+.home-hero {
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: var(--dl-space-six) var(--dl-space-three);
   background-color: var(--dl-color-custom-neutral-light);
 }
-
-/* if your inner container ever had a top margin, nuke it */
-.home-hero .heroContainer {
-  margin-top: 0;
-  padding-top: 0;
+.home-hero-heading {
+  max-width: 800px;
+  text-align: center;
+  font-family: Cabin, sans-serif;
+  margin: 0;
 }
 
-/* reset the h1’s default margins so nothing collapses */
-.home-hero-heading {
-  margin: 0;
+.home-features,
+.home-faq,
+.home-footer {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  background-color: var(--dl-color-custom-secondary1);
+}
+
+.featuresContainer,
+.faqContainer {
+  max-width: var(--dl-size-maxwidth);
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: var(--dl-space-four) var(--dl-space-three);
+}
+
+.featuresCard,
+.question1-container,
+.freePricingCard,
+.basicPricingCard,
+.proPricingCard {
+  background-color: var(--dl-color-custom-secondary1);
+  display: flex;
+  gap: var(--dl-space-unit);
+  border-radius: var(--dl-radius-8);
+}
+.featuresIcon {
+  width: 2rem;
+  height: 2rem;
+  flex-shrink: 0;
+  fill: var(--dl-color-custom-neutral-dark);
+}
+
+.feature-card-container {
+  display: flex;
+  flex-direction: column;
+  gap: var(--dl-space-unit);
+}
+.feature-card-text { line-height: 28px; }
+
+.question1-text { font-weight: 700; }
+
+.home-container2,
+.home-container3,
+.home-container4,
+.home-container5,
+.home-container6,
+.home-container7 {
+  display: flex;
+  flex-direction: column;
+}
+
+.home-separator {
+  width: 100%;
+  border-top: 1px solid var(--dl-color-gray-900);
+  margin: var(--dl-space-two) 0;
+}
+
+/* ----------------------------------------------
+   Responsive Breakpoints
+---------------------------------------------- */
+@media (max-width: 991px) {
+  .home-hero, .home-features,
+  .featuresContainer, .faqContainer,
+  .home-footer {
+    padding-left: var(--dl-space-two);
+    padding-right: var(--dl-space-two);
+  }
+  .home-container3 { grid-template-columns: 1fr; }
+}
+
+@media (max-width: 767px) {
+  .home-desktop-menu { display: none; }
+  .home-burger-menu { display: flex; }
+  .home-hero { flex-direction: column; }
+}
+
+@media (max-width: 479px) {
+  .home-hero { padding: var(--dl-space-two) var(--dl-space-unit); }
 }
