--- a/index.css
+++ b/index.css
@@ -151,7 +151,7 @@ html, body {
   position: fixed;
   top: 0;
   width: 100%;
-  background-color: var(--dl-color-gray-white);
+  background-color: var(--dl-color-custom-neutral-light);
   z-index: 100;
 }
 
