--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+/* reset all elements */
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 :root {
   --dl-color-gray-500: #595959;
   --dl-color-gray-700: #999999;
