--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@
   display: flex;
   min-height: auto;
   align-items: center;
-  padding-top: var(--dl-space-space-sixunits);
+  padding-top: var(--dl-space-space-threeunits);
   padding-left: var(--dl-space-space-threeunits);
   padding-right: var(--dl-space-space-threeunits);
   flex-direction: column;
@@ -172,6 +172,9 @@
   padding-bottom: var(--dl-space-space-twounits);
   justify-content: space-between;
   background-color: var(--dl-color-custom-neutral-light);
+}
+.socialIcons {
+  fill: var(--dl-color-custom-neutral-dark);
 }
 .Heading {
   font-size: 32px;
