--- a/style.css
+++ b/style.css
@@ -223,7 +223,7 @@
   background-color: var(--dl-color-custom-accent1);
 }
 .navbarContainer {
-  color: var(--dl-color-custom-neutral-dark);
+  color: var(--dl-color-custom-neutral-light) !important;
   width: 100%;
   display: flex;
   align-items: center;
