--- a/style.css
+++ b/style.css
@@ -232,7 +232,7 @@
   padding-right: var(--dl-space-space-threeunits);
   padding-bottom: var(--dl-space-space-oneandhalfunits);
   justify-content: space-between;
-  background-color: var(--dl-color-custom-neutral-light);
+  background-color: #FBF9EF !important;
 }
 .mobileMenu {
   color: var(--dl-color-custom-neutral-dark);
