--- a/index.css
+++ b/index.css
@@ -155,6 +155,7 @@ html, body {
   text-align: center;
   font-family: Cabin, sans-serif;
   margin: 0;
+  background-color: #FBF9EF !important;
 }
 
 .home-features,
