--- a/index.css
+++ b/index.css
@@ -25,7 +25,7 @@
   --dl-color-custom-accent1: #C7B090;
   --dl-color-custom-accent2: #768350;
   --dl-color-custom-neutral-dark: #1E2203;
-  --dl-color-custom-neutral-light: #FBF9EF;
+  --dl-color-custom-neutral-light: ##ffffff;
 
   /* Size Tokens */
   --dl-size-xsmall: 16px;
