--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@
   --dl-space-space-threeunits: 48px;
   --dl-color-custom-secondary1: #E9E7DE;
   --dl-color-custom-neutral-dark: #1E2203;
-  --dl-color-custom-neutral-light: #FBF9EF;
+  --dl-color-custom-neutral-light: ##ffffff;
   --dl-space-space-oneandhalfunits: 24px;
 }
 .home-banner-image {
