--- a/index.css
+++ b/index.css
@@ -62,7 +62,7 @@ html, body {
   font-family: 'Inter', sans-serif;
   font-size: 16px;
   line-height: 1.15;
-  color: var(--dl-color-gray-black);
+  color: var #ffffff;
 }
 
 /* ----------------------------------------------
