--- a/index.css
+++ b/index.css
@@ -58,7 +58,7 @@
 ---------------------------------------------- */
 html, body {
   width: 100%;
-  background-color: #FBF9EF !important;  
+  background-color: #ffffff !important;  
   font-family: 'Inter', sans-serif;
   font-size: 16px;
   line-height: 1.15;
