--- a/index.css
+++ b/index.css
@@ -58,11 +58,11 @@
 ---------------------------------------------- */
 html, body {
   width: 100%;
-  background-color: #ffffff !important;  
+  background-color: #FBF9EF !important;  
   font-family: 'Inter', sans-serif;
   font-size: 16px;
   line-height: 1.15;
-  color: var #ffffff;
+  color: var(--dl-color-gray-black);
 }
 
 /* ----------------------------------------------
