--- a/index.css
+++ b/index.css
@@ -25,7 +25,7 @@
   --dl-color-custom-accent1: #C7B090;
   --dl-color-custom-accent2: #768350;
   --dl-color-custom-neutral-dark: #1E2203;
-  --dl-color-custom-neutral-light: ##ffffff;
+  --dl-color-custom-neutral-light: #FBF9EF;
 
   /* Size Tokens */
   --dl-size-xsmall: 16px;
@@ -58,7 +58,7 @@
 ---------------------------------------------- */
 html, body {
   width: 100%;
-  background-color: #FBF9EF !important;  
+  background-color: var(--dl-color-custom-neutral-light);
   font-family: 'Inter', sans-serif;
   font-size: 16px;
   line-height: 1.15;
@@ -155,7 +155,6 @@ html, body {
   text-align: center;
   font-family: Cabin, sans-serif;
   margin: 0;
-  background-color: #FBF9EF !important;
 }
 
 .home-features,
