--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
 }
 
 .navbar {
-  background-color: var #768350;
+  background-color: var(--color-bg);
   position: fixed;
   top: 0;
   width: 100%;
